frontend/test/should_pass/array_004.grg
using array_model_001;

rule anonymousArray {
	a:A -e:E-> a;
	
	if { 
		a.val in array<int>[ 1, 3, 5, 7, 11, 13, 17 ]
		|| e.strval in array<string>[ "foo", "bar", "blubb" ]
		&& a.val in array<int>[ 2, 4, a.val, 19 ]
		&& e.strval in array<string>[ "bar", e.strval, "blubb" ];
	}
	
	if { 
		a.val in [ 1, 3, 5, 7, 11, 13, 17 ]
		|| e.strval in [ "foo", "bar", "blubb" ]
		&& a.val in [ 2, 4, a.val, 19 ]
		&& e.strval in [ "bar", e.strval, "blubb" ];
	}
	
	if { 
		a.spiceArray.peek(0)!=42
		&& a.spiceArray.size()!=42;
	}
	
	modify {
		eval {
			a.val = a.val in array<int>[ 2, 4, a.val, 19 ] ? a.val : 42;
			e.strval = e.strval in array<string>[ "bar", e.strval, "blubb" ] ? e.strval : 42;
		}
		
		eval {
			a.val = a.val in [ 2, 4, a.val, 19 ] ? a.val : 42;
			e.strval = e.strval in [ "bar", e.strval, "blubb" ] ? e.strval : 42;
		}
		
		eval { 
			a.val = a.spiceArray.peek(0); 
			a.val = a.spiceArray.size();
		}
	}
}
