frontend/test/should_fail/array_max_exec.grg
using array_model_001b;

test ti(var x:int, var y:int)
{
}

rule max {
	a:A;

	modify {
	---
		exec(ti(array<string>["1","2"].max(), a.niceArray.max()));
	}
}

